# coursework7

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
habit/: admin.py  models.py  paginators.py  serializer.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_habit_is_public.py
users/: admin.py  models.py  permissions.py  serializer.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_telegram_chat_id.py
