[tool.poetry]
name = "coursework7"
version = "0.1.0"
description = ""
authors = ["yura_filchakov <filchakov1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
flake8 = "^7.1.1"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
django-celery-beat = "^2.7.0"
celery = "^5.4.0"
setuptools = "^75.1.0"
django-filter = "^24.3"
requests = "^2.32.3"
eventlet = "^0.37.0"
redis = "^5.1.1"
billiard = "^4.2.1"
django-cors-headers = "^4.5.0"
coverage = "^7.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
